# advanced/api/modules/v1/controllers/UsersController.php
@@ -227,92 +227,6 @@ class UsersController extends ActiveController
     }
 
     /**
-     * 获取用户收藏
-     * @SWG\GET(
-     *     path="/v1/users/favorites",
-     *     tags={"User"},
-     *     summary="用户收藏",
-     *     description="获取用户收藏课程列表",
-     *     consumes={"application/json"},
-     *     produces={"application/json"},
-     *     @SWG\Parameter( name="user_id",type="integer", required=true, in="query",description="用户ID" ),
-     *     @SWG\Response( response="return",description="收藏列表")
-     * )
-     */
-    public function actionFavorites(){
-        //参数检测
-        ApiRequest::checkGet(["user_id"]);
-
-        //进行查询
-        $searchModel = new UserFavoriteSearch();
-        $dataProvider = $searchModel->search(Yii::$app->request->queryParams);
-
-        //设置分页
-        $pagination = ApiRequest::injectionPage($dataProvider);
-
-        //构建返回
-        $result = array_merge($pagination,[
-            "items" => $dataProvider->getModels()
-        ]);
-        return $result;
-    }
-
-    /**
-     * 添加用户收藏
-     * @SWG\POST(
-     *     path="/v1/users/favorites",
-     *     tags={"User"},
-     *     summary="添加用户收藏",
-     *     description="添加用户收藏",
-     *     consumes={"application/x-www-form-urlencoded"},
-     *     produces={"application/json"},
-     *     @SWG\Parameter( name="user_id",type="string", required=true, in="formData",description="用户ID" ),
-     *     @SWG\Parameter( name="course_id",type="string", required=true, in="formData",description="课程ID" ),
-     *     @SWG\Response( response="return",description="用户信息")
-     * )
-     */
-    public function actionFavoritesCreate(){
-        //参数检测
-        ApiRequest::checkPost(["user_id","course_id"]);
-
-        //保存并返回
-        $model = new UserFavorite();
-        if($model->load(Yii::$app->request->post(),"") && $model->save()){
-            return null;
-        }
-        else{
-            throw new BadRequestHttpException(ModelErrors::getError($model));
-        }
-    }
-
-    /**
-     * 添加用户收藏
-     * @SWG\DELETE(
-     *     path="/v1/users/favorites",
-     *     tags={"User"},
-     *     summary="移除用户收藏",
-     *     description="移除用户收藏",
-     *     consumes={"application/x-www-form-urlencoded"},
-     *     produces={"application/json"},
-     *     @SWG\Parameter( name="user_id",type="string", required=true, in="formData",description="用户ID" ),
-     *     @SWG\Parameter( name="course_id",type="string", required=true, in="formData",description="课程ID" ),
-     *     @SWG\Response( response="return",description="用户信息")
-     * )
-     */
-    public function actionFavoritesDelete(){
-        //参数检测
-        ApiRequest::checkPost(["user_id","course_id"]);
-        $user_id = Yii::$app->request->post("user_id");
-        $course_id = Yii::$app->request->post("course_id");
-
-        //查询模型
-        $model = UserFavorite::findOne(["user_id"=>$user_id,"course_id"=>$course_id]);
-
-        //进行删除
-        if($model) $model->delete();
-    }
-
-    /**
      * 获取用户课程
      * @SWG\GET(
      *     path="/v1/users/courses",
@@ -328,46 +242,12 @@ class UsersController extends ActiveController
     public function actionCourses(){
         //参数检测
         ApiRequest::checkGet(["user_id"]);
+        $user_id = Yii::$app->request->get("user_id");
 
         //进行查询
-        $searchModel = new UserCourseSearch();
-        $dataProvider = $searchModel->search_api(Yii::$app->request->queryParams);
-
-        //设置分页
-        $pagination = ApiRequest::injectionPage($dataProvider);
+        $list = UserCourse::getHaveCourse($user_id);
 
         //构建返回
-        $result = array_merge($pagination,[
-            "items" => $dataProvider->getModels()
-        ]);
-        return $result;
-    }
-
-    /**
-     * 添加用户课程
-     * @SWG\POST(
-     *     path="/v1/users/courses",
-     *     tags={"User"},
-     *     summary="添加用户课程（购买）",
-     *     description="添加用户课程，即相当于购买目前",
-     *     consumes={"application/x-www-form-urlencoded"},
-     *     produces={"application/json"},
-     *     @SWG\Parameter( name="user_id",type="string", required=true, in="formData",description="用户ID" ),
-     *     @SWG\Parameter( name="course_id",type="string", required=true, in="formData",description="课程ID" ),
-     *     @SWG\Response( response="return",description="用户信息")
-     * )
-     */
-    public function actionCoursesCreate(){
-        //参数检测
-        ApiRequest::checkPost(["user_id","course_id"]);
-
-        //保存并返回
-        $model = new UserCourse();
-        if($model->load(Yii::$app->request->post(),"") && $model->save()){
-            return null;
-        }
-        else{
-            throw new BadRequestHttpException(ModelErrors::getError($model));
-        }
+        return $list;
     }
 }
