# advanced/common/models/user/UserCourse.php
@@ -3,14 +3,18 @@
 namespace common\models\user;
 
 use Yii;
+
 use common\models\course\Course;
+use yii\base\Exception;
 
 /**
  * This is the model class for table "user_course".
  *
- * @property int $user_id
- * @property int $course_id
- * @property int $created_at
+ * @property int $user_id 用户
+ * @property int $course_id 课程
+ * @property bool $try 是否为试用
+ * @property int $tryed_at 使用结束时间
+ * @property int $created_at 开始时间
  *
  * @property Course $course
  * @property User $user
@@ -42,7 +46,8 @@ class UserCourse extends \yii\db\ActiveRecord
     {
         return [
             [['user_id', 'course_id'], 'required'],
-            [['user_id', 'course_id', 'created_at'], 'integer'],
+            [['user_id', 'course_id', 'tryed_at', 'created_at'], 'integer'],
+            [['try'], 'boolean'],
             [['user_id', 'course_id'], 'unique', 'targetAttribute' => ['user_id', 'course_id']],
             [['course_id'], 'exist', 'skipOnError' => true, 'targetClass' => Course::className(), 'targetAttribute' => ['course_id' => 'id']],
             [['user_id'], 'exist', 'skipOnError' => true, 'targetClass' => User::className(), 'targetAttribute' => ['user_id' => 'id']],
@@ -55,9 +60,11 @@ class UserCourse extends \yii\db\ActiveRecord
     public function attributeLabels()
     {
         return [
-            'user_id' => '用户',
-            'course_id' => '课程',
-            'created_at' => '添加时间',
+            'user_id' => 'User ID',
+            'course_id' => 'Course ID',
+            'try' => 'Try',
+            'tryed_at' => 'Tryed At',
+            'created_at' => 'Created At',
         ];
     }
 
@@ -75,5 +82,91 @@ class UserCourse extends \yii\db\ActiveRecord
     public function getUser()
     {
         return $this->hasOne(User::className(), ['id' => 'user_id']);
+    }
+
+    /**
+     * @param bool $insert
+     * @return bool
+     */
+    public function beforeSave($insert)
+    {
+        if($insert){
+            $this->created_at = time();
+        }
+
+        return parent::beforeSave($insert); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * 试用课程
+     * @param $user_id
+     * @param $course_id
+     * @return bool
+     * @throws Exception
+     */
+    static function tryCourse($user_id, $course_id){
+        //查询是否已经购买或者试用
+        $model = self::findOne(["user_id"=>$user_id, "course_id"=>$course_id]);
+        if($model)
+            throw new Exception("exist.");
+
+        //获取课程
+        $course = Course::findOne($course_id);
+        if(!$course)
+            throw new Exception("not fount course.");
+
+        //新建试用记录
+        $model = new self();
+        $model->user_id = $user_id;
+        $model->course_id = $course_id;
+        $model->try = true;
+        $model->tryed_at = time() + ($course->try_day * 24 * 60 * 60);
+
+        //保存信息
+        if($model->save())
+            return true;
+        else
+            return false;
+    }
+
+    /**
+     * 购买课程
+     * @param $user_id
+     * @param $course_id
+     * @return bool
+     * @throws Exception
+     */
+    static function buyCourse($user_id, $course_id){
+        //查询是否已经购买或者试用
+        $model = self::findOne(["user_id"=>$user_id, "course_id"=>$course_id]);
+        if(!$model){
+            $model = new self();
+            $model->user_id = $user_id;
+            $model->course_id = $course_id;
+        }
+
+        //修改记录
+        $model->try = false;
+
+        //保存信息
+        if($model->save())
+            return true;
+        else
+            return $model->errors;
+    }
+
+    /**
+     * 获取用户拥有课程
+     * @param $user_id
+     * @return array|\yii\db\ActiveRecord[]
+     */
+    static function getHaveCourse($user_id){
+        $query = self::find()
+            ->andWhere(["user_id"=>$user_id, "try"=>false])
+            ->orWhere('user_id=:user_id and try=:try and tryed_at>:tryed_at', [":user_id"=>$user_id, ":try"=>true, ":tryed_at"=>time()]);
+
+        $list = $query->all();
+
+        return $list;
     }
 }
